--- a/frontend/app/templates/components/text-component/font-size.hbs
+++ b/frontend/app/templates/components/text-component/font-size.hbs
@@ -29,7 +29,7 @@
     <div class="center aligned column labels">First Name</div>
     <div class="center aligned column    ">
       <div class="one wide column">
-        {{#ui-dropdown class="selection" selected="Bob"  onChange=(action (mut fonttype1))}}
+        {{#ui-dropdown class="selection" selected=fonttype1  onChange=(action (mut fonttype1))}}
           <div class="default text">Helvetica</div>
           <i class="dropdown icon"></i>
           <div class="menu">
@@ -52,7 +52,7 @@
     </div>
     <div class="center aligned column">
       <div class="one wide cloumn">
-        {{#ui-dropdown class="selection" onChange=(action (mut font1))}}
+        {{#ui-dropdown class="selection" selected=font1 onChange=(action (mut font1))}}
         <div class="default text">10</div>
         <i class="dropdown icon"></i>
         <div class="menu">
@@ -69,7 +69,7 @@
         {{/ui-dropdown}}
       </div>
     </div>
-   
+
     <div class="center aligned column ">
       <div class="ui toggle checkbox">
         <input name="public" type="checkbox" checked="checked">
@@ -81,7 +81,7 @@
     <div class="center aligned column labels">Last Name</div>
     <div class="center aligned column  ">
       <div class="one wide column">
-        {{#ui-dropdown class="selection" selected="Bob" onChange=(action (mut fonttype2))}}
+        {{#ui-dropdown class="selection" selected=fonttype2 onChange=(action (mut fonttype2))}}
           <div class="default text">Helvetica</div>
           <i class="dropdown icon"></i>
           <div class="menu">
@@ -104,7 +104,7 @@
     </div>
     <div class="center aligned column">
       <div class="one wide cloumn">
-        {{#ui-dropdown class="selection" onChange=(action (mut font2))}}
+        {{#ui-dropdown class="selection" selected=font2 onChange=(action (mut font2))}}
         <div class="default text">10</div>
         <i class="dropdown icon"></i>
         <div class="menu">
@@ -133,7 +133,7 @@
     <div class="center aligned column labels">Designation</div>
     <div class="center aligned column  ">
       <div class="one wide column">
-        {{#ui-dropdown class="selection" selected="Bob" onChange=(action (mut fonttype3))}}
+        {{#ui-dropdown class="selection" selected=fonttype3 onChange=(action (mut fonttype3))}}
           <div class="default text">Helvetica</div>
           <i class="dropdown icon"></i>
           <div class="menu">
@@ -156,7 +156,7 @@
     </div>
     <div class="center aligned column">
       <div class="one wide cloumn">
-        {{#ui-dropdown class="selection" onChange=(action (mut font3))}}
+        {{#ui-dropdown class="selection" selected=font3 onChange=(action (mut font3))}}
         <div class="default text">10</div>
         <i class="dropdown icon"></i>
         <div class="menu">
@@ -173,7 +173,7 @@
         {{/ui-dropdown}}
       </div>
     </div>
-    
+
     <div class="center aligned column">
       <div class="ui toggle checkbox">
         <input name="public" type="checkbox" checked="checked">
@@ -186,7 +186,7 @@
     <div class="center aligned column labels">Organization</div>
     <div class="center aligned column  ">
       <div class="one wide column">
-        {{#ui-dropdown class="selection" selected="Bob" onChange=(action (mut fonttype4))}}
+        {{#ui-dropdown class="selection" selected=fonttype4 onChange=(action (mut fonttype4))}}
           <div class="default text">Helvetica</div>
           <i class="dropdown icon"></i>
           <div class="menu">
@@ -209,7 +209,7 @@
     </div>
     <div class="center aligned column">
       <div class="one wide cloumn">
-        {{#ui-dropdown class="selection" onChange=(action (mut font4))}}
+        {{#ui-dropdown class="selection" selected=font4 onChange=(action (mut font4))}}
         <div class="default text">10</div>
         <i class="dropdown icon"></i>
         <div class="menu">
@@ -238,7 +238,7 @@
     <div class="center aligned column  labels">Handle (e.g. Github)</div>
     <div class="center aligned column  ">
       <div class="one wide column">
-        {{#ui-dropdown class="selection" selected="Bob" onChange=(action (mut fonttype5))}}
+        {{#ui-dropdown class="selection" selected=fonttype5 onChange=(action (mut fonttype5))}}
           <div class="default text">Helvetica</div>
           <i class="dropdown icon"></i>
           <div class="menu">
@@ -261,7 +261,7 @@
     </div>
     <div class="center aligned column">
       <div class="one wide cloumn">
-        {{#ui-dropdown class="selection" onChange=(action (mut font5))}}
+        {{#ui-dropdown class="selection" selected=font5 onChange=(action (mut font5))}}
         <div class="default text">10</div>
         <i class="dropdown icon"></i>
         <div class="menu">
