--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -41,8 +41,8 @@
                             <i class="info icon"></i>
                         </a>
                     </p>
-                    <div class="ui radio checkbox" onclick="showcsv();">
-                        <input type="radio" name="tab" value="igotnone" />
+                    <div class="ui radio checkbox"  onclick="showcsv();">
+                        <input type="radio" name="inputsource" value="igotnone"/>
                         <label>Upload CSV</label>
                     </div>
                     <div class="content" id="csv" style="display: none">
@@ -51,8 +51,18 @@
                         </div>
                     </div>
                     <br>
+                    <div class="ui radio checkbox"  onclick="showeventyaycsv();">
+                        <input type="radio" name="inputsource" value="igotnone"/>
+                        <label>Upload Eventyay attendees CSV File</label>
+                    </div>
+                    <div class="content" id="eventyaycsv" style="display: none">
+                        <div class="center aligned">
+                            {{ data-component/csv-component sendCSV=(action 'mutateEventyayCSV') }}
+                        </div>
+                    </div>
+                    <br>
                     <div class="ui radio checkbox">
-                        <input type="radio" name="tab" value="igotnone" onclick="showdetails();" />
+                        <input type="radio" name="inputsource" value="igotnone" onclick="showdetails();" />
                         <label>Enter Details</label>
                     </div>
                     <div class="content" id="details" style="display:none">
@@ -105,12 +115,13 @@
                     </p>
 
                     <div class="ui radio checkbox">
-                        <input type="radio" name="tab1" value="igotnone" onclick={{action 'defaultlogoimage'}} />
+                        <input type="radio" name="tab" value="igotnone" onclick={{action 'defaultlogoimage'}} />
                         <label>Use default FOSSASIA logo</label>
                     </div>
                     <br>
+
                     <div class="ui radio checkbox">
-                        <input type="radio" name="tab1" value="igotnone" onclick={{action 'customlogoimage'}} />
+                        <input type="radio" name="tab" value="igotnone" onclick={{action 'customlogoimage'}}/>
                         <label>Add event logo</label>
                     </div>
                     <div class="content" id="custlogoimg" style='display:none;'>
@@ -120,7 +131,7 @@
                     </div>
                     <br>
                     <div class="ui radio checkbox">
-                        <input type="radio" name="tab1" value="igotnone" onclick={{action 'customlogocol'}} />
+                        <input type="radio" name="tab" value="igotnone" onclick={{action 'customlogocol'}}/>
                         <label {{action "customLogoColorClicked"}}>Use event name text</label>
                     </div>
                     <div class="content" id="custlogocol" style='display:none;'>
@@ -142,51 +153,10 @@
                     </div>
                 </div>
             </div>
-            <div class="ui clearing segment">
-                <div class="ui form width-container">
-                    <p>
-                        <b>Select from one of the background sources</b>
-                        <a class="ui right floated icon orange basic button" data-tooltip="Best Suitable Image -> Size(width x height): 749 X 1049px & Resolution: 300 DPI"
-                            data-position="right center">
-                            <i class="info icon"></i>
-                        </a>
-                    </p>
-
-                    <div class="ui radio checkbox">
-                        <input type="radio" name="tab2" value="igotnone" onclick={{action "mutateCustomImage"}} />
-                        <label>Upload a Custom Image</label>
-                    </div>
-                    <div class="content" id="custimg" style="display:none">
-                        <div class="center aligned">
-                            {{ background-component/image-component imageData=imageData }}
-                        </div>
-                    </div>
-                    <br>
-                    <div class="ui radio checkbox">
-                        <input type="radio" name="tab2" value="igotnone" onclick="custombg();" />
-                        <label>Select from default backgrounds</label>
-                    </div>
-                    <br>
-                    <div class="content" id="custbg" style="display: none">
-                        <div class="center aligned">
-                            {{ background-component/def-image-component defImages=defImages sendDefImage=(action
-                            'mutateBackground') }}
-                        </div>
-                    </div>
-
-
-                    <div class="ui radio checkbox">
-                        <input type="radio" name="tab2" value="igotnone" onclick="customcol();" />
-                        <label>Select from a custom color</label>
-                    </div>
-                    <div class="content" id="custcol" style="display: none">
-                        <div class="center aligned">
-                            {{ background-component/color-bg-component sendDefColor=(action 'mutateDefColor')
-                            backColor=backColor }}
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {{#each ticketTypes as |ticketType index|}}
+                {{ badge-component/badge-background mutateBackground=(action 'mutateBackground')
+                    mutateDefColor=(action 'mutateDefColor') mutateCustomImage=(action 'mutateCustomImage') defImages=defImages idx=index ticketType=ticketType}}
+            {{/each}}
             <div class="ui segment">
                 <div class="ui form width-container">
 
@@ -250,16 +220,23 @@
         font_fn=defFont1Size font_ln=defFont2Size font_desg=defFont3Size font_org=defFont4Size font_sh=defFont5Size
         fontcol_fn=defFontCol1
         fontcol_ln=defFontCol2 fontcol_desg=defFontCol3 fontcol_org=defFontCol4 fontcol_sh=defFontCol5 defFont=defFont
-        defImageName=defImageName backImg=imageData backColor=backColor custLogoImage=custLogoImage
+        defImageName=defImageName.[0] backImg=imageData.[0] backColor=backColor.[0] custLogoImage=custLogoImage
         logoImageData=logoImageData
-        logoBackColor=logoBackColor logoFontColor=logoFontColor logo_text=logo_text defImage=defImage
-        custImage=custImage previewHeight=previewHeight
+        logoBackColor=logoBackColor logoFontColor=logoFontColor logo_text=logo_text defImage=defImage.[0]
+        custImage=custImage.[0] previewHeight=previewHeight
         }}
     </div>
 </div>{{overlay-welcome user=user removeFTL=(action 'removeFTL')}}
 <script>
     function showcsv() {
         document.getElementById('csv').style.display = 'block';
+        document.getElementById('eventyaycsv').style.display = 'none';
+        document.getElementById('details').style.display = 'none';
+
+    }
+    function showeventyaycsv() {
+        document.getElementById('csv').style.display = 'none';
+        document.getElementById('eventyaycsv').style.display = 'block';
         document.getElementById('details').style.display = 'none';
 
     }
