--- a/frontend/app/templates/components/user-component/user-password.hbs
+++ b/frontend/app/templates/components/user-component/user-password.hbs
@@ -2,6 +2,15 @@
 <h5 class="ui dividing header">Change your password.</h5>
 <form class="ui {{if isLoading 'loading'}} form" {{action 'updateUserPassword' on="submit"}}>
     <div class="field">
+        <label>Current Password</label>
+            <div class="fields">
+                <div class="ten wide field">
+                    {{input type="password" id="oldPassword" name=oldPassword}}
+                </div>
+            </div>
+    </div>
+
+    <div class="field">
         <label>New Password</label>
             <div class="fields">
                 <div class="ten wide field">
