Minor tweak in enter details input

--- a/frontend/app/templates/components/data-component/text-component.hbs
+++ b/frontend/app/templates/components/data-component/text-component.hbs
@@ -1,4 +1,3 @@
 <div class="field">
-    {{textarea name="data" rows="3" value=formData}}
+    {{textarea name="data" rows="3" value=formData placeholder="First Name, Last Name, Designation, Organization, @handle"}}
 </div>
-
