--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -173,7 +173,7 @@
                     </div>
                 </div>
             </div>
-            <button {{action "submitForm"}} class="ui fluid orange {{if authToken.isEmailVerified '' 'disabled'}} button">Create
+            <button {{action "submitForm"}} class="ui fluid orange {{if authToken.isEmailVerified '' }} button">Create
                 Badges</button>
             {{#each userError as |error|}}
             <p>{{error.message}}</p>
