--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -6,7 +6,7 @@
         </label>
     </div>
 </div>
-{{!----Event Listeners For Perview----}}+
+{{!----Event Listeners For Perview----}}
 {{#create-badge}}
 {{/create-badge}}
 <div class="ui stackable mobile reversed grid">
