Implemented Edit badge Functionality (#2028)
* Edit badge functionality

* Change submit button text to 'Save Changes' when editing badges

--- a/frontend/app/templates/components/badge-component/badge-background.hbs
+++ b/frontend/app/templates/components/badge-component/badge-background.hbs
@@ -39,5 +39,12 @@
                 {{ background-component/color-bg-component sendDefColor=(action 'mutDefColor') backColor=backColor }}
             </div>
         </div>
+        {{#if (eq mode 'edit')}}
+          <br>
+          <div class="ui radio checkbox">
+              <input type="radio" name="tab{{idx}}" value="igotnone" checked onclick={{action 'imageChange'}}/>
+              <label>Use previous background</label>
+          </div>
+        {{/if}}
     </div>
 </div>
