--- a/frontend/app/styles/partials/create-badge.scss
+++ b/frontend/app/styles/partials/create-badge.scss
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Germania+One');
+
+.heading
+{
+  font-family: 'Germania One', cursive;
+  color:#F2711C !important;
+  text-align:center;
+  font-size:50px;
+  margin-top:4px;
+  padding:5px;
+}
+
 .ui{
   .column{
     color: black;
