--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -6,7 +6,7 @@
         </label>
     </div>
 </div>
-<h1 style="font-family:'Open Sans', sans-serif;color:red;text-decoration:none;text-transform:uppercase;font-size:100px;font-weight:800;letter-spacing:-3px;line-height:1;text-shadow:#EDEDED 3px 2px 0;text-align:center">Badge Generator </h1>
+<h1 class="heading">Badge Generator </h1>
 {{!----Event Listeners For Perview----}}+
 {{#create-badge}}
 {{/create-badge}}
