added semantic ui to create badge page

--- a/frontend/app/styles/partials/create-badge.scss
+++ b/frontend/app/styles/partials/create-badge.scss
@@ -2,12 +2,10 @@
 
 .heading
 {
-  font-family: 'Germania One', cursive;
-  color:#F2711C !important;
+  font-size: 38px !important;
+  font-weight: 300 !important;
+  padding: 12px 20px !important;
   text-align:center;
-  font-size:50px;
-  margin-top:4px;
-  padding:5px;
 }
 
 .ui{
