--- a/frontend/app/templates/components/user-component/my-badges.hbs
+++ b/frontend/app/templates/components/user-component/my-badges.hbs
@@ -17,7 +17,8 @@
         {{#if model.length}}
         {{#each model as |badge|}}
         <div class="card">
-          <div class="image">
+          <div class="image" style="position:relative">
+          <img src="/images/image.png" style="position:absolute;opacity:0.1">
             <img src="{{badge.image_link}}">
           </div>
           <div class="content">
