--- a/frontend/app/templates/components/user-component/preview.hbs
+++ b/frontend/app/templates/components/user-component/preview.hbs
@@ -1,9 +1,8 @@
 <div class="ui basic segment">
     <div class="bgImg ui raised segment" style="padding:0">
         <div
-            style="
-background-size:contain;
-background-position:center;
+            style="background-size:contain;
+            background-position:center;
             background-repeat: no-repeat;
             height: {{if previewHeight '105' '120'}}px;
             color: #{{logoFontColor}};
