--- a/frontend/app/templates/components/footer-main.hbs
+++ b/frontend/app/templates/components/footer-main.hbs
@@ -1,4 +1,4 @@
-{{!-- <footer>
+<footer>
     <div class="ui bottom inverted menu">
         <div class="left menu">
             {{#link-to 'sitemap' class='item'}}
@@ -17,71 +17,10 @@
         <div class="right menu">
             <strong class="item">Follow us on</strong>
             {{#each socialMedia as |media|}}
-            <a class="item" href={{media.link}} target="_blank">
-                <i class="{{media.id}} icon"></i>
-                <span class="mobile-hide">{{ first-cap media.id}}</span>
+            <a class="item ui icon button" href={{media.link}} data-tooltip={{media.id}} data-position="left center"  target="_blank">
+                <i class="{{media.icon}} icon"  ></i>
             </a>
             {{/each}}
         </div>
     </div>
 </footer>
---}}
-<div class="ui inverted vertical footer segment">
-    <div class="ui container" style="padding-top: 40px">
-        <div class="ui stackable inverted divided equal height stackable grid">
-            <div class="three wide column">
-                <h4 class="ui inverted header">
-                    About
-                </h4>
-                <div class="ui inverted link list">
-                    {{#link-to 'sitemap' class='item'}}
-                    {{init-cap 'sitemap'}}
-                    {{/link-to}}
-                    {{#link-to 'faq' class='item'}}
-                    {{init-cap 'faq'}}
-                    {{/link-to}}
-                </div>
-            </div>
-            <div class="seven wide column ">
-                <h4 class="ui inverted header">
-                    Our Other Projects
-                </h4>
-                <div class="ui grid">
-                    <div class="six wide column">
-
-                        <div class="ui inverted link list">
-                            <a class="item" href="https://fossasia.org/">Fossasia</a>
-                            <a class="item" href="https://loklak.org/">Loklak</a>
-                            <a class="item" href="https://chat.susi.ai/">SUSI</a>
-                            <a class="item" href="https://eventyay.com/">Eventyay</a>
-                            <a class="item" href="https://github.com/fossasia/neurolab-android">Neurolab</a>
-                        </div>
-                    </div>
-                    <div class="one wide column">
-
-                    </div>
-                    <div class="six wide column">
-                        <div class="ui inverted link list">
-                            <a class="item" href="https://pslab.io/">PSlab</a>
-                            <a class="item" href="https://meilix.org/">Meilix</a>
-                            <a class="item" href="https://phimp.me/">Phimp.me</a>
-                            <a class="item" href="http://dev.yaydoc.org/">Yaydoc</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="four wide column">
-                <h4 class="ui inverted header">
-                    Connect with Us
-                </h4>
-                <div class="ui inverted link list">
-                     {{#each socialMedia as |media|}}
-                    <a class="item" href={{media.link}} target="_blank">
-                        <i class="{{media.id}} icon"></i>{{ first-cap media.id}}
-                    </a>
-                    {{/each}}
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
