Fixes #1920, #1963: Design improvements
Improves the design of the webapp. Adds heading to create-badges page.
Also makes the tooltip to appear correctly which was overlapped by
preview badge.

Signed-off-by: Abishek V Ashok <abishekvashok@gmail.com>

--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -1,10 +1,14 @@
 <div class="ui stackable grid">
+    <div class="right floated center aligned fourteen wide column">
+        <h2>Create badge</h2>
+    </div>
     <div class="right floated right aligned two wide column">
         <label class="switch" {{action 'togglePreview'}} data-tooltip="Toggle Preview" data-position="left center">
             <input type="checkbox" class="checkswitch">
             <span class="slider round"></span>
         </label>
     </div>
+
 </div>
 {{!----Event Listeners For Perview----}}
 {{#create-badge}}
