Fixes #2060: Adds support for additional paper sizes
Adds support for paper sizes - A0 and A1

Signed-off-by: Abishek V Ashok<abishekvashok@gmail.com>

--- a/frontend/app/templates/components/badge-component/paper-size.hbs
+++ b/frontend/app/templates/components/badge-component/paper-size.hbs
@@ -1,6 +1,18 @@
 <div class="inline fields">
     <div class="grouped fields">
     <div class="field">
+        <div class="ui radio checkbox" onclick={{ action 'mutatePaperSize' 'A0' }}>
+            <input name="size" value="A0" type="radio">
+            <label>A0</label>
+        </div>
+    </div>
+    <div class="field">
+        <div class="ui radio checkbox" onclick={{ action 'mutatePaperSize' 'A1' }}>
+            <input name="size" value="A1" type="radio">
+            <label>A1</label>
+        </div>
+    </div>
+    <div class="field">
         <div class="ui radio checkbox" onclick={{ action 'mutatePaperSize' 'A2' }}>
             <input name="size" value="A2" type="radio">
             <label>A2</label>
