Fixes #2063: Makes badgeyay functional for now
Makes badgeyay functional for now by enabling the create badge button
for all users.

Signed-off-by: Abishek V Ashok <abishekvashok@gmail.com>

--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -200,7 +200,7 @@
                     </div>
                 </div>
             </div>
-            <button {{action "submitForm"}} class="ui fluid orange {{if authToken.isEmailVerified '' 'disabled'}} button">
+            <button {{action "submitForm"}} class="ui fluid orange <!--{{if authToken.isEmailVerified '' 'disabled'}}--> button">
               {{if (eq mode 'create') 'Create Badges' 'Save Changes'}}
             </button>
             {{#each userError as |error|}}
