--- a/frontend/app/templates/components/pricing-component.hbs
+++ b/frontend/app/templates/components/pricing-component.hbs
@@ -6,24 +6,20 @@
         <p class="heading-alpha">Pricing</p>
         <br>
         <div class="inline-columns">
-            <div class="ui stackable two column grid container center aligned">
+            <div class="ui stackable three column grid container center aligned">
                 <div class="column">
                     <div class="pdf icon-pdf">
                         <div class="pdf-div">
                             <img class="pdf-img" src="/images/pdf-icon.png">
                         </div>
-                        <div class="heading-bravo">You print the generated PDF</div>
+                        <div class="heading-bravo">Less than 200 badges</div>
                         <div class="cb-price">
-                            <span class="cb-price-tag">$</span>
-                            <span class="cb-price-number">0.00</span>
-                            <span>for </span>
-                            <span class="cb-price-label">200</span>
-                            <span> badges</span>
+                            <span class="cb-price-number">Free</span>
                         </div>
                         <div class="ui list">
-                            <div class="item">Customize the font for your badges</div>
-                            <div class="item">Upload images for your badges</div>
-                            <div class="item">Available in different paper sizes A3, A4 etc</div>
+                            <div class="item">All features are identical with the paid options</div>
+                            <div class="item">Only 200 badges can be generated in total</div>
+                            <div class="item">The badges shall be print on your own</div>
                         </div>
                     </div>
                 </div>
@@ -33,16 +29,37 @@
                         <div class="grp-div">
                             <img class="grp-img" src="/images/blog.png">
                         </div>
-                        <div class="heading-bravo">Ran out of 200 badges?</div>
+                        <div class="heading-bravo">More than 200 badges</div>
                         <div class="cb-price">
-                            <div class="coming-soon">
-                                Coming Soon
-                            </div>
+                            <span class="cb-price-tag">$</span>
+                            <span class="cb-price-number">1.00</span>
+                            <span>for every</span>
+                            <span class="cb-price-label">200</span>
+                            <span> badges</span>
                         </div>
                         <div class="ui list">
-                            <div class="item">Get access to premium features and services</div>
+                            <div class="item">First 200 badges are free</div>
                             <div class="item">More badges for your events and meets</div>
-                            <div class="item">Customize your badges the way you like</div>
+                            <div class="item">The badges may be printout at one of our supply centers</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="border-left"></div>
+                    <div class="shipped icon-box">
+                        <div class="grp-div">
+                            <img class="grp-img" src="/images/favicon.png">
+                        </div>
+                        <div class="heading-bravo">Premium User</div>
+                        <div class="cb-price">
+                            <span class="cb-price-tag">$</span>
+                            <span class="cb-price-number">100.00</span>
+                            <span>per Month</span>
+                        </div>
+                        <div class="ui list">
+                            <div class="item">Unlimited no: of badges</div>
+                            <div class="item">Priority Printing support</div>
+                            <div class="item">Free printing delivery</div>
                         </div>
                     </div>
                 </div>
