--- a/frontend/app/templates/components/forms/login-form.hbs
+++ b/frontend/app/templates/components/forms/login-form.hbs
@@ -50,8 +50,8 @@
         <div class="ui vertical buttons oauth-buttons">
           <div class="buttons">
             <button type="button" class="ui google plus button capital large-oauth" {{ action 'logIn' 'google' }}>
-              <i class="google plus icon o-icon"></i>
-              <span class="log-text">Login with Google +</span>
+              <i class="google icon o-icon"></i>
+              <span class="log-text">Login with Google </span>
             </button>
           </div>
           <!--    <div class="ui horizontal divider"></div>
