Linter configuration and Some dependancies updates

--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -8,9 +8,8 @@
             <span class="slider round"></span>
         </label>
     </div>
-
 </div>
-{{!----Event Listeners For Perview----}}
+{{!----Event Listeners For Preview----}}
 {{#create-badge}}
 {{/create-badge}}
 <div class="ui stackable mobile reversed grid">
@@ -185,9 +184,7 @@
             {{/each}}
             <div class="ui segment">
                 <div class="ui form width-container">
-
                     {{!-- {{ text-component/font-color}} --}}
-
                     <div class="ui horizontal divider"></div>
                     <div class="content">
                         <div class="center aligned">
