--- a/frontend/app/templates/components/badge-design.hbs
+++ b/frontend/app/templates/components/badge-design.hbs
@@ -8,6 +8,7 @@
     </div>
     <div class="column features-list">
       <div class="border-left"></div>
+      <div class="align">
       <div class="ui left aligned bulleted list features-list">
         <h3 class="item">Many badge backgrounds to choose from</h3>
         <h3 class="item">Different types of available badge sizes</h3>
@@ -15,6 +16,7 @@
         <h3 class="item">Custom Logos for the badge</h3>
         <h3 class="item">Custom background sources</h3>
         <h3 class="item">Different paper sizes</h3>
+        </div>
       </div>
     </div>
   </div>
