Fix features to left #2070 (#2138)
* Fix features to left #2070

According to #2070, this will align features to left instead of center.

* Corrected align

--- a/frontend/app/styles/partials/pricing.scss
+++ b/frontend/app/styles/partials/pricing.scss
@@ -13,8 +13,10 @@ $price-color: #686565;
     font-weight: 200;
     text-align: center;
   }
-  .features-list{
+  .features-list {
     padding-top: 30px;
+    text-align: left;
+    padding-left: 7vw;
   }
 }
 
