--- a/frontend/app/templates/faq.hbs
+++ b/frontend/app/templates/faq.hbs
@@ -271,7 +271,7 @@
             <div class="ui divider"></div>
         </div>
         <div class="three wide column">
-            <div class="ui vertical menu">
+            <div class="ui vertical menu" style="position: sticky; top: 10px">
                 <a class="item" href="#general">General</a>
                 <a class="item" href="#account">Account</a>
                 <a class="item" href="#badges">Badges</a>
