--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -1,14 +1,10 @@
 {% extends 'base.html' %}
-
-{% block title %} Home {% endblock %}
-
 {% block content %}
-{% if user.is_authenticated %}
-  Hi {{ user.username }}!
-  <p><a href="{% url 'logout' %}">logout</a></p>
+ 
+    <div class="container">
+      <div class="block">
+        Welocome to Badgeyay!!!
+      </div>
+    </div>
 
-{% else %}
-  <p>You are not logged in</p>
-  <a href="{% url 'login' %}">login</a>
-{% endif %}
 {% endblock %}
