--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -3,7 +3,7 @@
  
     <div class="container">
       <div class="block">
-        Welocome to Badgeyay!!!
+        Welcome to Badgeyay!!!
       </div>
     </div>
 
