--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -1,10 +1,14 @@
 {% extends 'base.html' %}
-{% block content %}
- 
-    <div class="container">
-      <div class="block">
-        Welcome to Badgeyay!!!
-      </div>
-    </div>
 
+{% block title %}Home{% endblock %}
+
+{% block content %}
+{% if user.is_authenticated %}
+  Hi {{ user.username }}!
+  <p><a href="{% url 'logout' %}">logout</a></p>
+  <p><a href="{% url 'password_reset' %}">reset password</a></p>
+{% else %}
+  <p>You are not logged in</p>
+  <a href="{% url 'login' %}">login</a>
+{% endif %}
 {% endblock %}
