added signup and navbar

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -1,13 +1,82 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>{% block title %} Badgeyay {% endblock %}</title>
+
+    <!-- BootStrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
+
 <body>
-    <main>
-        {% block content %}
-        {% endblock %}
+
+    <!-- Navbar -->
+
+        <div class="navigation-wrap bg-light start-header start-style mb-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <nav class="navbar navbar-expand-md navbar-light">
+
+                            <a class="navbar-brand" href="{% url 'home' %}" target="_blank">
+                                <h3>Badgeyay</h3>
+                            </a>
+
+                            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav ml-auto py-4 py-md-0">
+                                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                                        <a class="nav-link" href="{% url 'home' %}">About</a>
+                                    </li>
+                                    {% if user.is_authenticated %}
+                                    <a class="nav-item nav-link" href="{% url 'home' %}"><i class="fa fa-plus"></i></a>
+                                  <a class="nav-item nav-link" href="javascript:{document.getElementById('logout').submit()}">Logout</a>
+                                  <form id="logout" method="POST" action="{% url 'logout' %}">
+                                    {% csrf_token %}
+                                    <input type="hidden" />
+                                  </form>
+                                {% else %}
+                                <a class="nav-item nav-link" href="{% url 'signup' %}">Sign up</a>
+                                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                    
+                                {% endif %}
+                                </ul>
+                            </div>
+
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <!-- Navbar -->
+    <main style="margin: auto;">
+                <div class="container">
+                    <div class="block">
+                        {% block content %}
+                        {% endblock %}
+                    </div>
+                </div>
+
     </main>
+
+    <!-- BootStrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
